[package]
name = "rust-gr"
version = "0.1.0"
authors = ["James <jamesbatchelor@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.3.2"
structopt ="0.3.23"
csv = "1.1.6"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.67"